--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "server": "json-server --watch db.json --port 3000"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +24,10 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "json": "^11.0.0",
+    "json-server": "^0.17.0",
     "rxjs": "~7.4.0",
+    "server": "^1.0.37",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
